--- a/templates/_base.html
+++ b/templates/_base.html
@@ -16,10 +16,10 @@
                 <nav>
                     <a href="{% url 'about' %}">About</a>
                     {% if user.is_authenticated %}
-                        <a href="{% url 'logout' %}">Log Out</a>
+                        <a href="{% url 'account_logout' %}">Log Out</a>
                     {% else %}
-                        <a href="{% url 'login' %}">Log In</a>
-                        <a href="{% url 'signup' %}">Sign Up</a>
+                        <a href="{% url 'account_login' %}">Log In</a>
+                        <a href="{% url 'account_signup' %}">Sign Up</a>
                     {% endif %}
                 </nav>
             </div>
